# apihunter

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SESSION_CONTEXT.md  docker-compose.yml  generate_assets.py  generate_assets_v2.py  mock_server.py  pyproject.toml
.github/workflows/: ci.yml
apihunter/: README.md  __init__.py  cli.py
apihunter/core/: __init__.py  db.py  exceptions.py  http_client.py  migrations.py  models.py  queries.py  redaction.py  schema.py  scope.py
apihunter/discovery/: __init__.py  base.py  constants.py  discovery.py  models.py
apihunter/discovery/providers/: __init__.py  path.py
apihunter/modules/: auth_analyzer.py  base.py  cors_analyzer.py  headers_analyzer.py  idor_analyzer.py  info_leak_analyzer.py  injection_analyzer.py  rate_limit_analyzer.py  registry.py
apihunter/parser/: models.py  openapi_parser.py
apihunter/report/: dashboard.py  inventory.py  markdown.py  render.py  sarif.py
tests/: test_auth_analyzer.py  test_cors_analyzer.py  test_dashboard.py  test_db.py  test_discovery.py  test_headers_analyzer.py  test_http_client.py  test_idor_analyzer.py  test_info_leak_analyzer.py  test_injection_analyzer.py  test_inventory.py  test_markdown.py  test_parser.py  test_rate_limit_analyzer.py  test_redaction.py  test_registry.py  test_render.py  test_sarif.py  test_scope.py
